* Bug #33437: The warning about an FQDN with only one dot was shown twice. Fixed that.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46496 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.66-4) unstable; urgency=low
+
+  * Bug #33437: The warning about an FQDN with only one dot was shown twice.
+    Fixed that.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 04 Dec 2013 16:22:10 +0100
+
 univention-system-setup (7.0.66-3) unstable; urgency=low
 
   * System-setup-boot: Disable firefox default browser check (Bug #33592)
