--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-6) unstable; urgency=low
+
+  * Make standard AD group names configurable via UCR (Bug #33645)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 04 Dec 2013 17:06:00 +0100
+
 univention-ldap (10.0.17-5) unstable; urgency=low
 
   * backup2master: transfer roles before removing the old master
