--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-7) unstable; urgency=low
+
+  * ucslint in its current version dislikes whitespace in UCR variables,
+    add ucslint.overrides for this (Bug #33645)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 04 Dec 2013 17:26:05 +0100
+
 univention-ldap (10.0.17-6) unstable; urgency=low
 
   * Make standard AD group names configurable via UCR (Bug #33645)
