* Bug #32845: Boolean attributes of policies are rendered as CheckBoxes. If these attributes were not defined, the CheckBox was shown as ticked. This has been changed to unticked.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46503 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-udm (4.0.97-10) unstable; urgency=low
+
+  * Bug #32845: Boolean attributes of policies are rendered as CheckBoxes. If
+    these attributes were not defined, the CheckBox was shown as ticked. This
+    has been changed to unticked.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 04 Dec 2013 22:40:55 +0100
+
 univention-management-console-module-udm (4.0.97-9) unstable; urgency=low
 
   * Bug #30156: adjusted error representation in frontend
