* Bug #33556: If the initial search attribute for a UDM module is configured and its value was not any searchable attribute, it caused LDAP errors. Now the module falls back to search for "Default properties"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46507 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-udm (4.0.97-11) unstable; urgency=low
+
+  * Bug #33556: If the initial search attribute for a UDM module is configured
+    and its value was not any searchable attribute, it caused LDAP errors. Now
+    the module falls back to search for "Default properties"
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 05 Dec 2013 12:41:40 +0100
+
 univention-management-console-module-udm (4.0.97-10) unstable; urgency=low
 
   * Bug #32845: Boolean attributes of policies are rendered as CheckBoxes. If
