--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-8) unstable; urgency=low
+
+  * Rename UCR variables (Bug #33645)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 05 Dec 2013 15:40:31 +0100
+
 univention-ldap (10.0.17-7) unstable; urgency=low
 
   * ucslint in its current version dislikes whitespace in UCR variables,
