--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-7) unstable; urgency=low
+
+  * added ldapsearch-wrapper to univention-ldapsearch calls (Bug #33583) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 06 Dec 2013 11:10:03 +0100
+
 univention-samba4 (3.0.39-6) unstable; urgency=low
 
   * added logrotate config for winbind to overwrite
