--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.5-2) unstable; urgency=low
+
+  * added groupNameMapping() (Bug #33650) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 09 Dec 2013 15:50:53 +0100
+
 univention-config-registry (9.0.5-1) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
