--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,15 @@
+univention-samba4 (3.0.39-9) unstable; urgency=low
+
+  * added ldapsearch-wrapper to ldapsearch (Bug #33583) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 09 Dec 2013 16:44:13 +0100
+
+univention-samba4 (3.0.39-8) unstable; urgency=low
+
+  * added wins/ipv6 to postinst (Bug #33250) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 09 Dec 2013 16:35:45 +0100
+
 univention-samba4 (3.0.39-7) unstable; urgency=low
 
   * added ldapsearch-wrapper to univention-ldapsearch calls (Bug #33583) 
