--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-13) unstable; urgency=low
+
+  * Bug #33482: Fixed, unified tests for renaming
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 09 Dec 2013 22:11:14 +0100
+
 ucs-test (4.0.161-12) unstable; urgency=low
 
   * Bug #33482: Added tests for renaming subcontainers, test for remaining
