--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-manager-modules (9.0.75-8) unstable; urgency=low
+
+  * More updates on subtree move. Ensure the temporary container will be
+    deleted in rollback mode as well and alwasy use the temporary folder
+    below cn=univention (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 10 Dec 2013 07:41:33 +0100
+
 univention-directory-manager-modules (9.0.75-7) unstable; urgency=low
 
   * Removed debug from exception message (Bug #33482)
