--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-4) unstable; urgency=low
+
+  * fixed last commit (Bug #33649) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 10 Dec 2013 10:53:09 +0100
+
 univention-lib (3.0.26-3) unstable; urgency=low
 
   * added group name localization in shell/umc.sh (Bug #33649) 
