added group name localization (Bug #33646)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46610 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.5-3) unstable; urgency=low
+
+  * added group name localization (Bug #33646) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 10 Dec 2013 10:55:57 +0100
+
 univention-nagios (7.0.5-2) unstable; urgency=low
 
   * remove unjoin script in postinst (Bug #32453)
