--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-14) unstable; urgency=low
+
+  * Bug #33482: Test preserving upper/lowercase when renaming
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 10 Dec 2013 11:00:42 +0100
+
 ucs-test (4.0.161-13) unstable; urgency=low
 
   * Bug #33482: Fixed, unified tests for renaming
