* Preserve the case for subelements during the subtree move   (Bug #33482)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46616 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.75-9) unstable; urgency=low
+
+  * Preserve the case for subelements during the subtree move
+    (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 10 Dec 2013 12:28:54 +0100
+
 univention-directory-manager-modules (9.0.75-8) unstable; urgency=low
 
   * More updates on subtree move. Ensure the temporary container will be
