--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (8.0.143-31) unstable; urgency=low
+
+  * Preserve the case for subelements during the subtree move
+    (Bug #33566)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 10 Dec 2013 12:30:09 +0100
+
 univention-directory-manager-modules (8.0.143-30) unstable; urgency=low
 
   * More updates on subtree move. Ensure the temporary container will be
