* Fixed german translation for unable to move (Bug #33482)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46619 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-10) unstable; urgency=low
+
+  * Fixed german translation for unable to move (Bug #33482)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 10 Dec 2013 12:40:04 +0100
+
 univention-directory-manager-modules (9.0.75-9) unstable; urgency=low
 
   * Preserve the case for subelements during the subtree move
