--- a/management/univention-directory-manager-modules/modules/univention/admin/handlers/de.po
+++ b/management/univention-directory-manager-modules/modules/univention/admin/handlers/de.po
@@ -66,7 +66,7 @@ msgstr "Zielobjekt kann keine Unterobjekte haben."
 #, python-format
 msgid "Unable to move object %s (%s) in subtree, trying to revert changes."
 msgstr ""
-"Das Object %s (%s) im Teilbaum kann nicht verschoben werden, Versuche den "
+"Das Objekt %s (%s) im Teilbaum kann nicht verschoben werden, versuche den "
 "Ausgangzustand wiederherzustellen."
 
 #: __init__.py:1484 __init__.py:1503
