--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (8.0.143-32) unstable; urgency=low
+
+  * Fixed german translation for unable to move (Bug #33566)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 10 Dec 2013 12:40:35 +0100
+
 univention-directory-manager-modules (8.0.143-31) unstable; urgency=low
 
   * Preserve the case for subelements during the subtree move
