--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-6) unstable; urgency=low
+
+  * Revert joinscript version increase (Bug #33447) 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 10 Dec 2013 12:46:56 +0100
+
 univention-management-console-frontend (3.0.152-5) unstable; urgency=low
 
   * Bug #32649: The progress bar does not have a transition anymore if the
