--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-5) unstable; urgency=low
+
+  * added univention.lib.s4 (Bug #33710) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 10 Dec 2013 15:59:55 +0100
+
 univention-lib (3.0.26-4) unstable; urgency=low
 
   * fixed last commit (Bug #33649) 
