* Python syntax fixes (Bug #33644)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46630 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-3) unstable; urgency=medium
+
+  * Python syntax fixes (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 10 Dec 2013 16:14:24 +0100
+
 univention-s4-connector (8.0.33-2) unstable; urgency=low
 
   * univention-ad-takeover:
