* Use correct quoting in system-setup-boot initscript (Bug #30034)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46634 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.66-5) unstable; urgency=low
+
+  * Use correct quoting in system-setup-boot initscript (Bug #30034) 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 10 Dec 2013 15:43:30 +0100
+
 univention-system-setup (7.0.66-4) unstable; urgency=low
 
   * Bug #33437: The warning about an FQDN with only one dot was shown twice.
