* Remove legacy names from well_known_sids dictionary (Bug #33644)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46642 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-6) unstable; urgency=medium
+
+  * Remove legacy names from well_known_sids dictionary (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 10 Dec 2013 18:54:50 +0100
+
 univention-lib (3.0.26-5) unstable; urgency=low
 
   * added univention.lib.s4 (Bug #33710) 
