--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-s4-connector (8.0.33-4) unstable; urgency=medium
+
+  * univention-ad-takeover: (Bug #33644)
+  * Don't rename "Printer-Admins"
+  * Use canonical group names for UCR variables to work around Bug #32461#c2
+  * No need to lookup different group names in Samba4 after renaming
+
+ -- Arvid Requate <requate@univention.de>  Tue, 10 Dec 2013 18:58:22 +0100
+
 univention-s4-connector (8.0.33-3) unstable; urgency=medium
 
   * Python syntax fixes (Bug #33644)
