--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (7.0.32-11) unstable; urgency=low
+
+  * The sync mode is now configurable for every connector property such
+    as users, groups, containers etc. (Bug #33711)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 11 Dec 2013 07:16:43 +0100
+
 univention-s4-connector (7.0.32-10) unstable; urgency=low
 
   * Fixed python syntax error from last commit (Bug #32542)
