--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-9) unstable; urgency=low
+
+  * fixed small typo in 10univention-ldap-server.inst (Bug #33645) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 11 Dec 2013 10:30:54 +0100
+
 univention-ldap (10.0.17-8) unstable; urgency=low
 
   * Rename UCR variables (Bug #33645)
