--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.2.0esr-6) unstable; urgency=low
+
+  * Update to Firefox 24.2 ESR (Bug #33715)
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 11 Dec 2013 11:36:35 +0100
+
 firefox-de (1:24.1.1esr-6) unstable; urgency=low
 
   * Update to Firefox 21.1.1esr (Bug #33451)
