added custom_groupname (Bug #33710)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46667 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-7) unstable; urgency=low
+
+  * added custom_groupname (Bug #33710)
+
+ -- Felix Botner <botner@univention.de>  Wed, 11 Dec 2013 15:03:12 +0100
+
 univention-lib (3.0.26-6) unstable; urgency=medium
 
   * Remove legacy names from well_known_sids dictionary (Bug #33644)
