--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-8) unstable; urgency=low
+
+  * use ucr.groupNameMapping in custom_groupname (Bug #33710) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 11 Dec 2013 15:16:43 +0100
+
 univention-lib (3.0.26-7) unstable; urgency=low
 
   * added custom_groupname (Bug #33710)
