--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (7.0.32-12) unstable; urgency=low
+
+  * Fixed typos (Bug #33711)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 11 Dec 2013 17:24:24 +0100
+
 univention-s4-connector (7.0.32-11) unstable; urgency=low
 
   * The sync mode is now configurable for every connector property such
