* Adjust univention-ad-takeover to univention.lib.s4 change (Bug #33644)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46691 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-7) unstable; urgency=medium
+
+  * Adjust univention-ad-takeover to univention.lib.s4 change (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 11 Dec 2013 17:47:45 +0100
+
 univention-s4-connector (8.0.33-6) unstable; urgency=low
 
   * Fixed typos (Bug #33711)
