--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-6) unstable; urgency=low
+
+  * fixed debian/install (Bug #33710) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 12 Dec 2013 11:22:49 +0100
+
 univention-pam (7.0.4-5) unstable; urgency=low
 
   * fixed debug output in group-name-mapping.py (Bug #33710) 
