--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-7) unstable; urgency=low
+
+  * Bug #33383: add setInitialValue method to teh ComplexInput widget
+
+ -- Florian Best <best@univention.de>  Thu, 12 Dec 2013 14:27:46 +0100
+
 univention-management-console-frontend (3.0.152-6) unstable; urgency=low
 
   * Revert joinscript version increase (Bug #33447) 
