* Bug #33383: add setInitialValue method to the ComplexInput widget
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46716 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,6 +1,6 @@
 univention-management-console-frontend (3.0.152-7) unstable; urgency=low
 
-  * Bug #33383: add setInitialValue method to teh ComplexInput widget
+  * Bug #33383: add setInitialValue method to the ComplexInput widget
 
  -- Florian Best <best@univention.de>  Thu, 12 Dec 2013 14:27:46 +0100
 
