* Add cleanup -pre and -post hookdirectories (Bug #33729) * Added a notifier and listener restart script to be executed after appliance setup cleanup.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46744 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (7.0.66-6) unstable; urgency=low
+
+  * Add cleanup -pre and -post hookdirectories (Bug #33729)
+  * Added a notifier and listener restart script to be executed after
+    appliance setup cleanup. 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 13 Dec 2013 14:50:53 +0100
+
 univention-system-setup (7.0.66-5) unstable; urgency=low
 
   * Use correct quoting in system-setup-boot initscript (Bug #30034) 
