* Bug #33673: improve error handling when initializing of a module failed. Now a feedback is sent to the client.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46753 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.23-1) unstable; urgency=low
+
+  * Bug #33673: improve error handling when initializing of a module failed.
+  	Now a feedback is sent to the client.
+
+ -- Florian Best <best@univention.de>  Fri, 13 Dec 2013 16:45:21 +0100
+
 univention-management-console (6.0.22-1) unstable; urgency=low
 
   * Add dependency on python-udm (Bug #32409)
