--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.66-8) unstable; urgency=low
+
+  * Add appliance hook script which removes a forced setting
+    for the UCRV update/available (Bug #33762)
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 17 Dec 2013 15:01:06 +0100
+
 univention-system-setup (7.0.66-7) unstable; urgency=low
 
   * Add cleanup -pre and -post hookdirectories (Bug #33729)
