* Restart amavis in cleanup hook script (Bug #33765)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46793 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.66-10) unstable; urgency=low
+
+  * Restart amavis in cleanup hook script (Bug #33765)
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 17 Dec 2013 16:23:19 +0100
+
 univention-system-setup (7.0.66-9) unstable; urgency=low
 
   * Add appliance hook script which removes a forced setting
