* New UCR variable samba/winbind/rpc/only (Bug #33303)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46806 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.15-2) unstable; urgency=medium
+
+  * New UCR variable samba/winbind/rpc/only (Bug #33303)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 18 Dec 2013 13:44:07 +0100
+
 univention-samba (8.0.15-1) unstable; urgency=low
 
   * Don't remove the service entry from localhost in case of the S3 to
