--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.38-4) unstable; urgency=medium
+
+  * Remove update32/ignore_samba_trust and set samba/winbind/rpc/only
+    instead (Bug #33303)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 18 Dec 2013 15:15:32 +0100
+
 univention-updater (9.0.38-3) unstable; urgency=low
 
   * Use user agent string for all requests (Bug #33552)
