--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-listener (8.0.0-5) unstable; urgency=medium
+
+  * Always run replication handler, fixing boolean logic twist in patch
+    for Bug #29475 (Bug #33732)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 19 Dec 2013 13:00:20 +0100
+
 univention-directory-listener (8.0.0-4) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30946)
