* Cover all possible index combinations (Bug #33430)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46820 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-10) unstable; urgency=medium
+
+  * Cover all possible index combinations (Bug #33430)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 19 Dec 2013 15:12:48 +0100
+
 univention-ldap (10.0.17-9) unstable; urgency=low
 
   * fixed small typo in 10univention-ldap-server.inst (Bug #33645) 
