* Make univention-ldapsearch accept standard udm authentication options   like --binddn, --bindpwd and --bindpwdfile (Bug #32560)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46823 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,10 @@
+univention-config-registry (9.0.5-3) unstable; urgency=medium
+
+  * Make univention-ldapsearch accept standard udm authentication options
+    like --binddn, --bindpwd and --bindpwdfile (Bug #32560)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 19 Dec 2013 15:42:52 +0100
+
 univention-config-registry (9.0.5-2) unstable; urgency=low
 
   * added groupNameMapping() (Bug #33650) 
