--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-15) precise; urgency=low
+
+  * Don't use /tmp as home. In UCS@school the home directory is moved if
+    the user is removed (Bug #33812)
+
+ -- stefan <gohmann@univention.de>  Tue, 31 Dec 2013 11:25:36 +0100
+
 ucs-test (4.0.161-14) unstable; urgency=low
 
   * Bug #33482: Test preserving upper/lowercase when renaming
