* Bug #33004: Fixed links when having multiple UCR policies active at the same time
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46895 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-13) unstable; urgency=low
+
+  * Bug #33004: Fixed links when having multiple UCR policies active at the
+    same time
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 06 Jan 2014 14:02:26 +0100
+
 univention-management-console-module-udm (4.0.97-12) unstable; urgency=low
 
   * Bug #33004: Certain policies did not get a link to directly edit them when
