--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-s4-connector (8.0.33-9) unstable; urgency=medium
+
+  * univention-ad-takeover (Bug #33644):
+  * Fix matching of well known SIDs
+  * Fix migration of existing UCS group SIDs
+
+ -- Arvid Requate <requate@univention.de>  Mon, 06 Jan 2014 20:57:10 +0100
+
 univention-s4-connector (8.0.33-8) unstable; urgency=medium
 
   * univention-ad-takeover (Bug #33644):
