--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-11) unstable; urgency=medium
+
+  * PEP 0263 for univention-ad-takeover (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 07 Jan 2014 11:43:05 +0100
+
 univention-s4-connector (8.0.33-10) unstable; urgency=medium
 
   * univention-ad-takeover (Bug #33644):
