* Bug #33793: Allow usage of new Join module methods
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46914 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.2-9) unstable; urgency=low
+
+  * Bug #33793: Allow usage of new Join module methods
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 07 Jan 2014 13:22:59 +0100
+
 univention-demo-configuration (2.0.2-8) unstable; urgency=low
 
   * Bug #33845: Allow usage of new App Center methods
