--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-11) unstable; urgency=low
+
+  * Bug #33704: Change UCR policy attribute encoding from ASCII to UTF-8
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 07 Jan 2014 16:58:59 +0100
+
 univention-ldap (10.0.17-10) unstable; urgency=medium
 
   * Cover all possible index combinations (Bug #33430)
