made univention-prinquota executable (Bug #33791)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46945 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printquota/debian/changelog
+++ b/services/univention-printquota/debian/changelog
@@ -1,3 +1,9 @@
+univention-printquota (6.0.2-4) unstable; urgency=low
+
+  * made univention-prinquota executable (Bug #33791) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 09:33:13 +0100
+
 univention-printquota (6.0.2-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
