fixed quoting in 30univention-nagios-client.inst and 28univention-nagios-server.inst (Bug #33593)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46949 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,10 @@
+univention-nagios (7.0.5-4) unstable; urgency=low
+
+  * fixed quoting in 30univention-nagios-client.inst and
+    28univention-nagios-server.inst (Bug #33593) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 11:12:39 +0100
+
 univention-nagios (7.0.5-3) unstable; urgency=low
 
   * added group name localization (Bug #33646) 
