* Bug #33757: 20_appcenter/17app_status now checks for the seven supported app categories
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46967 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-21) unstable; urgency=low
+
+  * Bug #33757: 20_appcenter/17app_status now checks for the seven supported
+    app categories
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 08 Jan 2014 16:00:42 +0100
+
 ucs-test (4.0.161-20) unstable; urgency=low
 
   * 10_ldap/48replication_listener_cache_up_to_date_check: added test
