--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.15-3) unstable; urgency=low
+
+  * increase max number of open files for smbd Bug #33031 
+
+ -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 16:52:10 +0100
+
 univention-samba (8.0.15-2) unstable; urgency=medium
 
   * New UCR variable samba/winbind/rpc/only (Bug #33303)
