increase max number of open files for smbd Bug #33031
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46976 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-11) unstable; urgency=low
+
+  * increase max number of open files for smbd Bug #33031 
+
+ -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 16:59:37 +0100
+
 univention-samba4 (3.0.39-10) unstable; urgency=medium
 
   * New UCR variable samba/share/sysvol/update_mtime (Bug #33751)
