increase max number of open files for smbd Bug #32415
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46978 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.15-4) unstable; urgency=low
+
+  * increase max number of open files for smbd Bug #32415 
+
+ -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 17:07:42 +0100
+
 univention-samba (8.0.15-3) unstable; urgency=low
 
   * increase max number of open files for smbd Bug #33031 
