--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-11) unstable; urgency=medium
+
+  * Issue a WARNING instead of an ERROR message (Bug #33582)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 08 Jan 2014 18:21:36 +0100
+
 univention-lib (3.0.26-10) unstable; urgency=medium
 
   * Mask non-fatal exit code of ucs_registerLDAPExtension (Bug #33582)
