* Always run replication handler, fixing boolean logic twist in patch   for Bug #29475 (Bug #33731)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46985 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-listener (7.0.9-2) unstable; urgency=medium
+
+  * Always run replication handler, fixing boolean logic twist in patch
+    for Bug #29475 (Bug #33731)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 08 Jan 2014 18:34:49 +0100
+
 univention-directory-listener (7.0.9-1) unstable; urgency=low
 
   * Hide password in debug message (Bug #31053)
