* Bug #33542: univention-add-app now works through proxies * Bug #31410: Fixed documentation of univention-add-app
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46996 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/umc/js/de.po
+++ b/base/univention-updater/umc/js/de.po
@@ -443,7 +443,7 @@ msgid ""
 "release. Use the %(module)s to upgrade this application if possible."
 msgstr ""
 "Version %(version)s der Applikation %(name)s ist für das neue Release nicht "
-"verfügbar. Benutzen Sie das %(module)s um die Applikation zu aktualisieren, "
+"verfügbar. Benutzen Sie das %(module)s, um die Applikation zu aktualisieren, "
 "falls möglich."
 
 #: umc/js/updater/UpdatesPage.js:85
