--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.38-5) unstable; urgency=low
+
+  * Bug #33542: univention-add-app now works through proxies
+  * Bug #31410: Fixed documentation of univention-add-app
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 09 Jan 2014 11:04:24 +0100
+
 univention-updater (9.0.38-4) unstable; urgency=medium
 
   * Remove update32/ignore_samba_trust and set samba/winbind/rpc/only
