* Fix pythonism (Bug #33582)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46998 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-12) unstable; urgency=medium
+
+  * Fix pythonism (Bug #33582)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 11:39:46 +0100
+
 univention-lib (3.0.26-11) unstable; urgency=medium
 
   * Issue a WARNING instead of an ERROR message (Bug #33582)
