--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-13) unstable; urgency=medium
+
+  * Fix return code passing (Bug #33582)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 15:14:27 +0100
+
 univention-lib (3.0.26-12) unstable; urgency=medium
 
   * Fix pythonism (Bug #33582)
