--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.38-6) unstable; urgency=low
+
+  * Bug #33610: Releases newer than the one specified in the applied release
+    policy are completely hidden
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 09 Jan 2014 17:33:18 +0100
+
 univention-updater (9.0.38-5) unstable; urgency=low
 
   * Bug #33542: univention-add-app now works through proxies
