* Bug #33610: Fixed dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47011 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-7) unstable; urgency=low
+
+  * Bug #33610: Fixed dependencies
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 09 Jan 2014 17:46:32 +0100
+
 univention-updater (9.0.38-6) unstable; urgency=low
 
   * Bug #33610: Releases newer than the one specified in the applied release
