--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.5-4) unstable; urgency=medium
+
+  * added userNameMapping() (Bug #33889)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 18:24:10 +0100
+
 univention-config-registry (9.0.5-3) unstable; urgency=medium
 
   * Make univention-ldapsearch accept standard udm authentication options
