* Add custom_username function to shell and python lib (Bug #33644)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47013 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-14) unstable; urgency=medium
+
+  * Add custom_username function to shell and python lib (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 18:25:19 +0100
+
 univention-lib (3.0.26-13) unstable; urgency=medium
 
   * Fix return code passing (Bug #33582)
