--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-12) unstable; urgency=medium
+
+  * univention-ad-takeover:
+    Rename well known users in UDM to match the name in AD (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 19:17:48 +0100
+
 univention-s4-connector (8.0.33-11) unstable; urgency=medium
 
   * PEP 0263 for univention-ad-takeover (Bug #33644)
