--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (2.0.15-5) unstable; urgency=low
+
+  * Add ntp/noquery (Bug #33833)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 09 Jan 2014 19:08:21 +0100
+
 univention-base-files (2.0.15-4) unstable; urgency=low
 
   * Move motd startup for welcome message from /etc/pam.d/common-session to
