--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (3.0.4-2) unstable; urgency=low
+
+  * Add ntp/noquery (Bug #33834)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 09 Jan 2014 19:08:59 +0100
+
 univention-base-files (3.0.4-1) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
