--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-22) unstable; urgency=low
+
+  * Bug #33757: 20_appcenter/17app_status typo fixed
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 09 Jan 2014 22:44:45 +0100
+
 ucs-test (4.0.161-21) unstable; urgency=low
 
   * Bug #33757: 20_appcenter/17app_status now checks for the seven supported
